cmake_minimum_required(VERSION 3.15)
project(byte-manipulator)

# add_executable(send send.cpp include/byte-manipulator.cpp)
# add_executable(send_test send_test.cpp include/byte-manipulator.cpp)
add_executable(bytemanipulate bytemanipulate.cpp)

# target_include_directories(send PUBLIC include)
# target_include_directories(send_test PUBLIC include)

